# project_work

./: .env.sample.py  .gitignore  README.md  main.py  pyproject.toml  widget.py  Файл для вывода данных
data/: log.txt  oper.json
src/: category.py  category_14_2.py  dec.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  product.py  read_from_file_product.py  read_from_files.py  utils.py  widget.py
tests/: conftest.py  test_category.py  test_decorators.py  test_external_api.py  test_generators.py  test_genetators.py  test_masks.py  test_processing.py  test_product.py  test_read_from_file_product.py  test_read_from_files.py  test_utils.py  test_widget.py
