[tool.poetry]
name = "pythonproject-work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
readme-md = "^2019.1.28"
flake8 = "^7.1.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.0"
black = "^24.4.2"
isort = "^5.13.2"


[tool.poetry.group.Lint.dependencies]
flake8 = "^7.1.0"
mypy = "^1.11.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''(/(\.git)/)'''          # в корне проекта

[tool.isort]
# Максимальная длина строки
line_length=119

[tool.mypy]
# Максимальная длина строки
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'
